Update how to handle references, send bullets over network, Cereal is sometimes failing -> will write own seralizing func instead

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "ratio": "cpp",
         "mutex": "cpp",
         "thread": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "cstring": "cpp",
+        "set": "cpp"
     }
 }
